--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
     "jest": "^23.5.0",
     "ts-jest": "^23.1.4",
     "ts-loader": "^4.5.0",
+    "ts-node": "^7.0.1",
     "typescript": "^3.0.1",
     "webpack": "^4.17.0"
   },
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "node": "ts-node"
   },
   "jest": {
     "roots": [
